search button click Handler added by onclick

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                         Forum</h1>
                     <p class="py-6">Share your favorite opinion and win and wp forum coffee mug!</p>
                     <div class="relative">
-                        <input class="text-black py-4 px-5 rounded-full w-full" type="text"
+                        <input id="inputField" class="text-black py-4 px-5 rounded-full w-full outline-none" type="text"
                             placeholder="Search here anything">
-                        <button
+                        <button onclick="clickHandler()"
                             class="btn text-white absolute top-1 right-1 py-3 px-5 bg-blue-600 rounded-full">Search</button>
                     </div>
                 </div>
