--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="mt-4 lg:mt-0 lg:w-[40%] p-6 bg-[#12132D0D] rounded-3xl">
                     <div class="flex justify-between">
                         <p>Title</p>
-                        <p><i class="text-green-500 fa-solid fa-check-double"></i> Mark as read (<span>4</span>)</p>
+                        <p><i class="text-green-500 fa-solid fa-check-double"></i> Mark as read (<span id="current-marked-count">0</span>)</p>
                     </div>
 
                     <div class="flex p-3 bg-white rounded-xl mt-2">
