added mark as read append child function

--- a/index.html
+++ b/index.html
@@ -105,15 +105,10 @@
                 </div>
 
                 <!-- mark as read container -->
-                <div class="mt-4 lg:mt-0 lg:w-[40%] p-6 bg-[#12132D0D] rounded-3xl">
+                <div id="mark-as-read-container" class="mt-4 lg:mt-0 lg:w-[40%] p-6 bg-[#12132D0D] rounded-3xl">
                     <div class="flex justify-between">
                         <p>Title</p>
                         <p><i class="text-green-500 fa-solid fa-check-double"></i> Mark as read (<span id="current-marked-count">0</span>)</p>
-                    </div>
-
-                    <div class="flex p-3 bg-white rounded-xl mt-2">
-                        <p class="font-semibold">10 Kids Unaware of Their Halloween Costume</p>
-                        <p><span><i class="fa-regular fa-eye"></i> &#160 </span> <span> 1,568</span> </p>
                     </div>
                 </div>
             </div>
