added join & latest post

--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
             </div>
             <div class="mt-5 lg:mt-10 lg:flex gap-5">
                 <!-- post container -->
-                <div id="post-container"  class="lg:w-[60%] space-y-5">
+                <div id="post-container" class="lg:w-[60%] space-y-5">
                 </div>
 
                 <!-- mark as read container -->
                 <div id="mark-as-read-container" class="mt-4 lg:mt-0 lg:w-[40%] p-6 bg-[#12132D0D] rounded-3xl">
                     <div class="flex justify-between">
                         <p>Title</p>
-                        <p><i class="text-green-500 fa-solid fa-check-double"></i> Mark as read (<span id="current-marked-count">0</span>)</p>
+                        <p><i class="text-green-500 fa-solid fa-check-double"></i> Mark as read (<span
+                                id="current-marked-count">0</span>)</p>
                     </div>
                 </div>
             </div>
@@ -116,6 +117,33 @@
         </section>
         <!-- end Let’s Discuss section -->
 
+        <!-- start join section -->
+        <section class="mt-[30px] lg:mt-[80px]">
+            <div class="hero bg-[#12132D] lg:pl-[80px] lg:py-5 rounded-3xl">
+                <div class="hero-content flex-col lg:flex-row-reverse">
+                    <img src="images/joinforum.png" class="max-w-sm rounded-lg shadow-2xl" />
+                    <div class="lg:pr-14 text-white">
+                        <h1 class="text-5xl font-bold">Join Our Forum</h1>
+                        <p class="py-6">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run
+                            unit tests and view the results directly within the app. </p>
+                        <button class="btn btn-primary rounded-full px-5">Registered Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- start Latest Posts section -->
+        <section class="mt-[30px] lg:mt-[80px] text-center">
+            <h1 class="text-3xl font-bold">Latest Posts</h1>
+            <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features
+                allow for a streamlined .</p>
+
+            <!-- latest post container -->
+            <div id="latest-Post-Container" class="mt-5 text-start flex gap-6 flex-col lg:flex-row">
+                <div class="card bg-base-100 shadow-xl">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
